@@ -29,7 +29,7 @@
           http://ibiblio.lsu.edu/main/pub/packages/maven2
           http://www.ibiblio.net/pub/packages/maven2
   -->
-  <property name="repo.maven.org" value="http://repo1.maven.org/maven2/" override="false"/>
+  <property name="repo.maven.org" value="${mvnrepo}" override="true"/>
   <property name="maven2.pattern"  value="[organisation]/[module]/[revision]/[module]-[revision]"/> 
   <property name="maven2.pattern.ext" value="${maven2.pattern}.[ext]"/>
   <!-- pull in the local repository -->
