@@ -24,6 +24,9 @@ INCOMPATIBLE CHANGES
 
 IMPROVEMENTS
 
+PIG-1707: Allow pig build to pull from alternate maven repo to enable building
+against newer hadoop versions (pradeepkth)
+
 PIG-1618: Switch to new parser generator technology (xuefuz via thejas)
 
 PIG-1531: Pig gobbles up error messages (nrai via hashutosh) 
